--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
         </ul>
     </nav>
     <main>
-        <video src="/img/gregdepressivo.mp4" muted
-            autoplay loop></video>
-        <div class="main-text">
+        <div class="divBonita">
             <div class="fundo">
                 <h3>Cassino Online e Apostas Esportivas</h3>
                 <h2>Junte-se à <span>maior experiência de jogo</span></h2>
@@ -50,7 +48,46 @@
                 </p>
             </div>
         </div>
-
+        <div class="tutorial">
+            <h2>Como começar</h2>
+            <div class="passos">
+                <div class="cada-passo">
+                    <h1>1</h1>
+                    <p>
+                        <span>
+                            Abra sua conta
+                        </span> <br/>
+                        Para ser elegível para esta promoção, abra sua conta utilizando o código promocional FWB200,
+                        selecione pelo menos uma forma de comunicação em “Preferências de Marketing” e faça seu 1º depósito.
+                    </p>
+                </div>
+                <div class="cada-passo">
+                    <h1>2</h1>
+                    <p>
+                        <span>
+                            Faça sua 1ª aposta
+                        </span><br/>
+                        Faça sua primeira aposta de R$ 10 ou mais na Betfair Exchange com cotação mínima de 1.5 em qualquer
+                        evento. Atenção, ao fazer uma aposta "contra" no mesmo evento, você não estará elegível para a
+                        promoção.
+                    </p>
+                </div>
+                <div class="cada-passo">
+                    <h1>3</h1>
+                    <p>
+                        <span>
+                            Receba seu bônus
+                        </span><br/>
+                        Se sua primeira aposta qualificativa cumprir os requisitos e não for vencedora, você receberá o
+                        valor apostado até R$ 200 em apostas grátis na Betfair Exchange válido por 30 dias.
+                    </p>
+                </div>
+            </div>
+            <button class="glow-on-hover" id="comecar" type="button">
+                <a href="#">Quero apostar</a>
+            </button>
+        </div>
+    </main>
 </body>
 
 </html>
