--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a class="active" href="#">Apostas</a></li>
+            <li><a href="#">Apostas</a></li>
             <li><a href="#">Ao vivo</a></li>
             <li><a href="#">Promoções</a></li>
             <div id="logo-responsiva-meio" class="logo">
@@ -48,17 +48,18 @@
                 </p>
             </div>
         </div>
-        <div class="tutorial">
-            <h2>Como começar</h2>
+        <section class="tutorial">
+            <h1>Como começar</h1>
             <div class="passos">
                 <div class="cada-passo">
                     <h1>1</h1>
                     <p>
                         <span>
                             Abra sua conta
-                        </span> <br/>
+                        </span> <br />
                         Para ser elegível para esta promoção, abra sua conta utilizando o código promocional FWB200,
-                        selecione pelo menos uma forma de comunicação em “Preferências de Marketing” e faça seu 1º depósito.
+                        selecione pelo menos uma forma de comunicação em “Preferências de Marketing” e faça seu 1º
+                        depósito.
                     </p>
                 </div>
                 <div class="cada-passo">
@@ -66,8 +67,9 @@
                     <p>
                         <span>
                             Faça sua 1ª aposta
-                        </span><br/>
-                        Faça sua primeira aposta de R$ 10 ou mais na Betfair Exchange com cotação mínima de 1.5 em qualquer
+                        </span><br />
+                        Faça sua primeira aposta de R$ 10 ou mais na Betfair Exchange com cotação mínima de 1.5 em
+                        qualquer
                         evento. Atenção, ao fazer uma aposta "contra" no mesmo evento, você não estará elegível para a
                         promoção.
                     </p>
@@ -77,17 +79,123 @@
                     <p>
                         <span>
                             Receba seu bônus
-                        </span><br/>
+                        </span><br />
                         Se sua primeira aposta qualificativa cumprir os requisitos e não for vencedora, você receberá o
                         valor apostado até R$ 200 em apostas grátis na Betfair Exchange válido por 30 dias.
                     </p>
                 </div>
             </div>
             <button class="glow-on-hover" id="comecar" type="button">
-                <a href="#">Quero apostar</a>
+                <a href="#">Partiu apostar!</a>
             </button>
-        </div>
+        </section>
+        <section class="termos">
+            <h1>Termos e Condições</h1>
+            <div class="termo-flex">
+                <div class="termo-parte">
+                    <h2>
+                        Por que a Betfair?
+                    </h2>
+                    <p>
+                        Presente no mercado desde o ano 2000, está listada na bolsa de Londres e faz parte do grupo
+                        Flutter
+                        Entertainment (o maior grupo de apostas online do mundo).
+                        Mais 18 milhões de clientes ao redor do mundo confiam em nossas marcas.
+                        Fomos a primeira empresa do setor a oferecer produtos exclusivos aos nossos clientes como o
+                        Exchange (a
+                        maior bolsa esportiva do mundo), o Cash Out (função que permite encerrar suas apostas a qualquer
+                        momento) e o Segure essa Bolada (um produto exclusivo Betfair onde tudo o que tem de fazer é
+                        segurar
+                        seus ganhos).
+                    </p>
+                    <h2>
+                        Quem pode participar desta promoção?
+                    </h2>
+                    <p>
+                        Oferta exclusiva para novos clientes que residem no Brasil;
+                        Ao abrir a sua conta, você deverá usar o Código Promocional FWB200.
+                        Por favor, note que os métodos de pagamento AstroPayPrepaid e AstropayTEF não serão elegíveis
+                        para serem
+                        utilizados no primeiro depósito com esta oferta de boas-vindas.
+                        Nota importante: você precisará concluir a verificação de identidade e fornecer um comprovante
+                        de
+                        endereço válido antes de fazer sua primeira aposta. Qualquer conta que não tenha concluído a
+                        verificação
+                        de identidade antes da primeira aposta não será elegível para esta promoção.
+                        Como participar desta promoção?
+                        Abra sua conta com o código promocional "FWB200" e efetue seu primeiro depósito.
+                        A sua primeira aposta tem de ser efetuada no Exchange até 30 dias depois do cadastro da conta
+                        Betfair e
+                        a aposta mínima tem de ser R$ 10. Esta aposta deverá ser saldada dentro do mesmo período, ou
+                        seja, 30
+                        dias.
+                        Se apostar menos de R$ 10 na primeira aposta no Exchange, você não poderá beneficiar desta
+                        promoção. O
+                        bônus da oferta apenas será pago se a sua primeira aposta de R$ 10 ou mais for não for
+                        vencedora.
+                        Durante a sua primeira aposta qualificativa, você não poderá encerrar a aposta utilizando o
+                        serviço de
+                        Cash Out e a cotação mínima deverá ser igual ou superior a 1.5.
+                        Sua aposta de qualificação será anulada caso você coloque qualquer outra aposta no mesmo evento
+                        ou
+                        mercado antes desta ser liquidada.
+                        Apostas não correspondidas, não resolvidas ou anuladas não serão consideradas válidas para esta
+                        promoção.
+                    </p>
+                </div>
+                <div class="termo-parte">
+                    <h2>
+                        O que eu posso ganhar?
+                    </h2>
+                    <p>
+                        Caso sua primeira aposta de R$ 10 ou mais na Betfair Exchange não seja vencedora, você receberá
+                        um bônus
+                        em apostas grátis do mesmo valor de sua primeira aposta até R$ 200.
+                        O bônus em apostas grátis é válida apenas para a Betfair Exchange e deverá ser utilizado dentro
+                        de 30
+                        dias.
+                        No caso da primeira aposta elegível no Betfair Exchange ser vencedora, não haverá qualquer
+                        crédito de
+                        apostas grátis em sua conta.
+                        No caso de serem efetuadas duas apostas em simultâneo, a primeira aposta saldada será a aposta
+                        elegível.
+                        O valor do bônus recebido caso a sua primeira aposta não seja vencedora poderá ser repartido por
+                        várias
+                        apostas, ou seja, você não precisará apostar a totalidade do bônus recebido em uma só aposta.
+                        O valor apostado não será retornado, somente os seus lucros em cada aposta.
+                    </p>
+                    <h2>
+                        Quando eu receberei o meu bônus?
+                    </h2>
+                    <p>
+                        O bônus será creditado em sua carteira de bônus dentro de 48 horas após a aposta qualificativa
+                        ter sido
+                        resolvida. Este bônus em aposta grátis é para uso exclusivo na Betfair Exchange, com cotações
+                        mínimas de
+                        1.5, e será válida por 30 dias. Lembre-se que você só receberá o bônus caso sua aposta
+                        qualificativa não
+                        for vencedora.
+                        Aplicam-se os T&C gerais da Betfair.
+                    </p>
+                    <div class="div-gremio">
+                        <h5>
+                            Patrocinador Oficial
+                        </h5>
+                        <img class="gremio" src="/img/gremio-logo-escudo.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="github">
+            <img src="/img/GitHub_logo.png" alt="">
+            <a class="link-github" href="">DEV<span>HORODESKI</span></a>
+        </div>
+        <div>
+            <p>créditos a mita sophia que me deu a ideia S2</p>
+        </div>
+    </footer>
 </body>
 
 </html>
