--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <footer>
         <div class="github">
             <img src="/img/GitHub_logo.png" alt="">
-            <a class="link-github" href="">DEV<span>HORODESKI</span></a>
+            <a class="link-github" href="https://github.com/horodeski">DEV<span>HORODESKI</span></a>
         </div>
         <div>
             <p>créditos a mita sophia que me deu a ideia S2</p>
