--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#">Promoções</a></li>
             <div id="logo-responsiva-meio" class="logo">
                 <h1>
-                    FREG<span>BET</span>
+                    <span>BET</span>FREG
                 </h1>
             </div>
             <li><a href="#">Cassino</a></li>
@@ -68,7 +68,7 @@
                         <span>
                             Faça sua 1ª aposta
                         </span><br />
-                        Faça sua primeira aposta de R$ 10 ou mais na Betfair Exchange com cotação mínima de 1.5 em
+                        Faça sua primeira aposta de R$ 10 ou mais na BETFREG Exchange com cotação mínima de 1.5 em
                         qualquer
                         evento. Atenção, ao fazer uma aposta "contra" no mesmo evento, você não estará elegível para a
                         promoção.
@@ -81,7 +81,7 @@
                             Receba seu bônus
                         </span><br />
                         Se sua primeira aposta qualificativa cumprir os requisitos e não for vencedora, você receberá o
-                        valor apostado até R$ 200 em apostas grátis na Betfair Exchange válido por 30 dias.
+                        valor apostado até R$ 200 em apostas grátis na BETFREG Exchange válido por 30 dias.
                     </p>
                 </div>
             </div>
@@ -94,7 +94,7 @@
             <div class="termo-flex">
                 <div class="termo-parte">
                     <h2>
-                        Por que a Betfair?
+                        Por que a BETFREG?
                     </h2>
                     <p>
                         Presente no mercado desde o ano 2000, está listada na bolsa de Londres e faz parte do grupo
@@ -104,7 +104,7 @@
                         Fomos a primeira empresa do setor a oferecer produtos exclusivos aos nossos clientes como o
                         Exchange (a
                         maior bolsa esportiva do mundo), o Cash Out (função que permite encerrar suas apostas a qualquer
-                        momento) e o Segure essa Bolada (um produto exclusivo Betfair onde tudo o que tem de fazer é
+                        momento) e o Segure essa Bolada (um produto exclusivo BETFREG onde tudo o que tem de fazer é
                         segurar
                         seus ganhos).
                     </p>
@@ -125,7 +125,7 @@
                         Como participar desta promoção?
                         Abra sua conta com o código promocional "FWB200" e efetue seu primeiro depósito.
                         A sua primeira aposta tem de ser efetuada no Exchange até 30 dias depois do cadastro da conta
-                        Betfair e
+                        BETFREG e
                         a aposta mínima tem de ser R$ 10. Esta aposta deverá ser saldada dentro do mesmo período, ou
                         seja, 30
                         dias.
@@ -148,13 +148,13 @@
                         O que eu posso ganhar?
                     </h2>
                     <p>
-                        Caso sua primeira aposta de R$ 10 ou mais na Betfair Exchange não seja vencedora, você receberá
+                        Caso sua primeira aposta de R$ 10 ou mais na BETFREG Exchange não seja vencedora, você receberá
                         um bônus
                         em apostas grátis do mesmo valor de sua primeira aposta até R$ 200.
-                        O bônus em apostas grátis é válida apenas para a Betfair Exchange e deverá ser utilizado dentro
+                        O bônus em apostas grátis é válida apenas para a BETFREG Exchange e deverá ser utilizado dentro
                         de 30
                         dias.
-                        No caso da primeira aposta elegível no Betfair Exchange ser vencedora, não haverá qualquer
+                        No caso da primeira aposta elegível no BETFREG Exchange ser vencedora, não haverá qualquer
                         crédito de
                         apostas grátis em sua conta.
                         No caso de serem efetuadas duas apostas em simultâneo, a primeira aposta saldada será a aposta
@@ -170,12 +170,12 @@
                     <p>
                         O bônus será creditado em sua carteira de bônus dentro de 48 horas após a aposta qualificativa
                         ter sido
-                        resolvida. Este bônus em aposta grátis é para uso exclusivo na Betfair Exchange, com cotações
+                        resolvida. Este bônus em aposta grátis é para uso exclusivo na BETFREG Exchange, com cotações
                         mínimas de
                         1.5, e será válida por 30 dias. Lembre-se que você só receberá o bônus caso sua aposta
                         qualificativa não
                         for vencedora.
-                        Aplicam-se os T&C gerais da Betfair.
+                        Aplicam-se os T&C gerais da BETFREG.
                     </p>
                     <div class="div-gremio">
                         <h5>
