feat: rota de login

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h3>Cassino Online e Apostas Esportivas</h3>
                 <h2>Junte-se à <span>maior experiência de jogo</span></h2>
                 <button class="glow-on-hover" type="button">
-                    <a href="#">Quero apostar</a>
+                    <a href="/pages/login.html">Quero apostar</a>
                 </button>
                 <p>
                     *18+. Oferta exclusiva para novos clientes. Aposte de forma responsável. T&Cs se aplicam.*
